# leaf-lang

./: .gitignore  Cargo.toml  README.md  brainfuck.md  differences.md  idioms.md
programs/: brainfuck.leaf  brainfuck.txt  brainfuck_42.leaf  brainfuck_42_nowrap.leaf  brainfuck_42_wrap.leaf  leaf.leaf
programs/brainfuck/: 42_nowrap.leaf  42_wrap.leaf  beaver_17.leaf
programs/tutorial/: 2_movement.leaf  3_deletion.leaf  4_loops.leaf  5_rebasing.leaf  6_conditional.leaf  7_numerals.leaf  8_addition.leaf  8_numerals.leaf  9_lists.leaf  demo.leaf
src/: ast.rs  cursor.rs  lib.rs  main.rs  meta.rs  tree.rs  vm.rs
src/tree/: mod.rs  multi.rs  rooted.rs  view.rs
